<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Museum guide</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="noAccount">No account yet? Create one</string>
    <string name="alreadyMember">Already a member? Login</string>
    <string name="login" translatable="false">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="register">REGISTER</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="logout_desc">Enough for me</string>
    <string name="dashboard">Dashboard</string>
    <string name="write_review">Write Review</string>
    <string name="backdrop_title" translatable="false">LOVE MUSIC</string>
    <string name="backdrop_subtitle" translatable="false">This season top 20 albums</string>
    <string name="login_text" translatable="false">LOGIN</string>
    <string name="galleries">Galleries</string>
    <string name="galleries_desc">I want to explore</string>
    <string name="poi">Points of interest</string>
    <string name="map">Museum map</string>
    <string name="position">Where am I?</string>
    <string name="poi_desc">I\'m hungry</string>
    <string name="settings">Settings</string>
    <string name="settings_desc">I\'ll do it myself</string>
    <string name="first_name_r">First name is required!</string>
    <string name="last_name_r">Last name is required!</string>
    <string name="email_r">Email is required!</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="password_required">Password is required(min 6 characters)</string>
    <string name="username_required">Username is required(min 6 characters)</string>
    <string name="change_language_button">Change language</string>
    <string name="trying_to_log_in">Trying to log in...</string>
    <string name="please_wait">Please wait...</string>
    <string name="registering">Registering...</string>
    <string name="token_refresh">Refreshed logged in user token...</string>
    <string name="new_artifact">New artifact discovered!</string>
    <string name="loading_galleries">Loading galleries...</string>
    <string name="loading_artifacts">Loading artifacts...</string>

    <string name="no_connection">You are not connected to the internet!</string>
    <string name="wrong_credentials">Wrong username or password!</string>
    <string name="server_down">Could not connect. Please try again later</string>
    <string name="error_title">Error</string>
    <string name="username_in_use">This username is already taken!</string>
    <string name="email_in_use">This email is already taken!</string>
    <string name="record_sound">Record sound</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_match">Passwords do not match!</string>
    <string name="close_btn">Close</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="submiting_review_title">Submitting review</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>

    <string name="notification_subtitle">Counting your steps</string>

    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>

    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>

    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>

    <!-- Settings -->
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>

    <string name="quit">Quit</string>

    <string name="label_azimuth_string">Azmiuth:</string>
    <string name="label_pitch_string">Pitch:</string>
    <string name="label_roll_string">Roll:</string>

    <!-- String for the orientation values. The %1$.2f part is a placeholder
     that will be filled in at runtime:
     %1 is the value to replace
     $.2f says the value is a float, with two decimal places.  -->
    <string name="value_format">%1$.2f</string>
    <string name="language_en">English</string>
    <string name="language_ro">Română</string>
    <string name="change_language_label">Change language</string>
    <string name="range">Range: %1$s</string>

    <string-array name="poi_array">
        <item>Restaurants</item>
        <item>Hotels</item>
        <item>Museums</item>
        <item>Bars</item>
        <item>Clubs</item>
        <item>Hospitals</item>
    </string-array>

</resources>
